# ezextract

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
ezextract/: __init__.py  utils.py
